axios and requests

--- a/netflix-clone/public/index.html
+++ b/netflix-clone/public/index.html
@@ -41,3 +41,6 @@
     -->
   </body>
 </html>
+
+<!-- http://api.themoviedb.org/3/discover/tv?api_key=39bb719638cc97dd07644d66091d23ac&with_network=213 -->
+<!-- base URL https//image.tmbd.org/t/p/original -->
